# mcptube

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  mcp.json  pyproject.toml  server.json
.github/workflows/: ci.yml  mcp-publish.yml  pypi-publish.yml
docs/: SPEC.md
scripts/: batch_add.py  export_cookies.py  install-skill.py  parse_youtube_history.py  parse_youtube_history.py.bak  save_history_ids.py
skills/mcptube/: SKILL.md
src/mcptube/: __init__.py  __main__.py  cli.py  config.py  discovery.py  llm.py  models.py  report.py  server.py  service.py
src/mcptube/ingestion/: frames.py  scene_frames.py  vision.py  youtube.py
src/mcptube/storage/: cache.py  sqlite.py  vectorstore.py
src/mcptube/wiki/: __init__.py  engine.py  extractor.py  models.py  repository.py  storage.py  updater.py
tests/: conftest.py  test_cli_integration.py  test_discovery.py  test_frames.py  test_llm.py  test_report.py  test_resolve.py  test_scene_frames.py  test_server_integration.py  test_service.py  test_sqllite.py  test_storage.py  test_vectorstore.py  test_vision.py  test_wiki_engine.py  test_wiki_extractor.py  test_wiki_models.py  test_wiki_storage.py  test_wiki_updater.py  test_youtube.py
tools/: release.sh
