[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcptube-vision"
version = "0.2.0"
description = "YouTube video knowledge engine — transcripts, vision, and persistent wiki"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "0xchamin", email = "chmk90@gmail.com" },
]
keywords = ["mcp", "youtube", "ai", "fastmcp", "video", "wiki", "vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastmcp>=3.0,<4.0",
    "yt-dlp>=2025.0.0",
    "typer>=0.9",
    "pydantic-settings>=2.0",
    "litellm>=1.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
mcptube = "mcptube.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mcptube"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
